<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/ic_baseline_school_24"
            android:title="@string/leaderboard" />
        <item
            android:id="@+id/Course_Package_List"
            android:icon="@drawable/ic_baseline_video_library_24"
            android:title="@string/Course_Package_List" />
        <item
            android:id="@+id/subs_plan"
            android:icon="@drawable/ic_baseline_store_mall_directory_24"
            android:title="@string/Membershipplan" />
        <item
            android:id="@+id/nav_myExams"
            android:icon="@drawable/ic_history"
            android:title="@string/MyExam"
            android:visible="false" />
        <item
            android:id="@+id/terms_condition"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/Terms" />
    </group>
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/menu_share"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_baseline_send_24"
                android:title="@string/menu_about2" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>
